--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,7 +3,9 @@
     font-family: 'Roboto', sans-serif;
 }
 
-
+body{
+    background-color: #F2F2F2;
+}
 
 header{
     display: flex;
@@ -43,6 +45,7 @@ header{
     align-items: center;
     width: 55%;
     height: 700px;
+    background-color: white;
 }
 
 .caixinha{
@@ -54,7 +57,7 @@ header{
 
 .escolha{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
     
 }
@@ -158,5 +161,56 @@ input{
     background-color: #404EED;
 }
 
+.pedidos{
+    width: 100%;
+    height: 250px;
+    background-color: #F2F2F2;
+}
+
+h3{
+    margin-top: 30px;
+    margin-left: 183px;
+    margin-bottom: 22px;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.vitrine{
+    display: flex;
+    justify-content: space-between;
+    left: 0; right: 0;
+margin: auto;
+    width: 70%;
+    height: 200px;
+}
+
+.expo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 150px;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.roupas{
+    width:125px;
+    height: 75%;
+    object-fit: cover;
+    
+    
+}
+
+h4{
+    margin-top: 5px;
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+}
+
+strong{
+    font-weight: 700;
+}
 
 
